# archon-platform

./: .gitignore  CLAUDE.md  Claude_Code_Cheat_Sheet.md  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
archon_prime/: __init__.py  main.py
archon_prime/api/: .dockerignore  Dockerfile  __init__.py  alembic.ini  config.py  dependencies.py  main.py  requirements.txt
archon_prime/api/access/: ACCESS_MODEL.md  ACCESS_PROCEDURES.md  __init__.py  audit.py  rbac.py
archon_prime/api/admin/: __init__.py  routes.py  schemas.py  service.py
archon_prime/api/alembic/: env.py
archon_prime/api/auth/: __init__.py  jwt.py  routes.py  schemas.py  service.py
archon_prime/api/compliance/: COMPLIANCE_GUIDE.md  __init__.py  evidence.py  provenance.py  reports.py
archon_prime/api/db/: __init__.py  models.py  session.py
archon_prime/api/deploy/: .env.example  .env.prod.example  .env.staging.example  .gitignore  DEPLOYMENT.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml
archon_prime/api/profiles/: __init__.py  routes.py  schemas.py  service.py
archon_prime/api/runbooks/: RB-001-mt5-outage.md  RB-002-signal-gate-overload.md  RB-003-websocket-degradation.md  RB-004-database-failover.md  RB-005-admin-intervention.md  RB-006-emergency-hedge.md  README.md
archon_prime/api/services/: __init__.py  background_tasks.py  encryption.py  mt5_pool.py
archon_prime/api/signals/: __init__.py  (+3 more)
archon_prime/core/: __init__.py  config_manager.py  event_bus.py  orchestrator.py  plugin_base.py  plugin_loader.py
archon_prime/dashboard/: __init__.py  app.py  data_provider.py
archon_prime/docs/: COMMERCIAL_POSITIONING.md  CORE_FREEZE.md  FIRST_DEPLOYMENT.md  OPERATOR_GUIDE.md
archon_prime/plugins/: __init__.py
archon_ri/: __init__.py
config/: live.yaml  paper.yaml
docs/: ARCHON_Development_Framework.md  ARCHON_PRIME_ARCHITECTURE_PLAN.md  CLAUDE_FEEDBACK.md
shared/: __init__.py
shared/archon_ai/: __init__.py
shared/archon_brokers/: __init__.py
shared/archon_core/: __init__.py  constants.py  correlation_tracker.py  cvar_engine.py  exceptions.py  hurst_regime.py  kelly_criterion.py  panic_hedge.py  position_manager.py  signal_gate.py
shared/archon_data/: __init__.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_correlation_tracker.py  test_cvar_engine.py  test_event_bus.py  test_kelly_criterion.py  test_panic_hedge.py  test_paper_broker.py  test_plugin_base.py  test_position_manager.py  test_signal_gate.py
(+51 files in other folders)
